added responsive banner

--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
      </header>
 
      <main>
-
+        <section class="banner">
+        <div class="banner-style">
+            <h1 class="style noto-serif-font">ALWAYS <span class="color">FRESH<br>FLOWERS</span></h1>
+            <p class="p-color">Indulge your senses with the beauty and fragrance of<br>our fresh flower shop. From classic roses to exotic<br>blooms, we offer a wide variety of fresh flowers that<br>are perfect for any occasion. </p>
+        </div>
+        <div>
+            <img class="image-style" src="assets/hero-flower.png" alt="">
+        </div>
+        </section>
      </main>
 
      <footer>
