--- a/index.html
+++ b/index.html
@@ -32,6 +32,65 @@
             <img class="image-style" src="assets/hero-flower.png" alt="">
         </div>
         </section>
+
+        <section class="Plants Section">
+            <div class="Plants">
+                <h1><span class="color">Our</span> Plants</h1>
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br>classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div>
+                <div class="container">
+                    <div class="card">
+                        <img src="assets/sample-flower-image.png" alt="">
+                        <h3>Lily Blossom</h3>
+                        <p class="para-color">20 USD</p>
+                        <button class="back-color">ADD TO CART</button>
+                    </div>
+                    <div class="card">
+                        <img src="assets/sample-flower-image.png" alt="">
+                        <h3>Lily Blossom</h3>
+                        <p class="para-color">20 USD</p>
+                         <button class="back-color">ADD TO CART</button>
+                    </div>
+                    <div class="card">
+                        <img src="assets/sample-flower-image.png" alt="">
+                        <h3>Lily Blossom</h3>
+                        <p class="para-color">20 USD</p>
+                         <button class="back-color">ADD TO CART</button>
+                    </div>
+                    <div class="card">
+                        <img src="assets/sample-flower-image.png" alt="">
+                        <h3>Lily Blossom</h3>
+                        <p class="para-color">20 USD</p>
+                         <button class="back-color">ADD TO CART</button>
+                    </div>
+                    <div class="card">
+                        <img src="assets/sample-flower-image.png" alt="">
+                        <h3>Lily Blossom</h3>
+                        <p class="para-color">20 USD</p>
+                         <button class="back-color">ADD TO CART</button>
+                    </div>
+                    <div class="card">
+                        <img src="assets/sample-flower-image.png" alt="">
+                        <h3>Lily Blossom</h3>
+                        <p class="para-color">20 USD</p>
+                         <button class="back-color">ADD TO CART</button>
+                    </div>
+                    <div class="card">
+                        <img src="assets/sample-flower-image.png" alt="">
+                        <h3>Lily Blossom</h3>
+                        <p class="para-color">20 USD</p>
+                         <button class="back-color">ADD TO CART</button>
+                    </div>
+                    <div class="card">
+                        <img src="assets/sample-flower-image.png" alt="">
+                        <h3>Lily Blossom </h3>
+                        <p class="para-color">20 USD</p>
+                         <button class="back-color">ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+        </section>
      </main>
 
      <footer>
