--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <section class="Plants Section">
             <div class="Plants">
-                <h1><span class="color">Our</span> Plants</h1>
+                <h1 class="noto-serif-font"><span class="color">Our</span> Plants</h1>
                 <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br>classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
             <div>
@@ -111,13 +111,67 @@
             </div>
 
         </section>
-        <section>
+
+        <section class="latest-deal-section">
+            <div class="flex-layout">
+                <div class="head">
+                    <h1 class="noto-serif-font"><span class="color">Latest </span> Deals</h1>
+                    <p class="text-gray">Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br>classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                </div>
+                <div class="grid-container">
+                <div class="grid-i">
+                   <div>
+                     <p class="image-1 margin-padding">60% Off | Bloom Plant<br><u>Shop Now</u></p>
+                   </div>
+                    <div>
+                    <p class="image-2 margin-padding">30%Off | Ana  Plant<br><u>Shop Now</u></p>
+                    </div>
+                </div>
+                    <div class="grid-i">
+                    <p class="image-3 margin-padding">25% Off | Zabo Plant<br><u>Shop Now</u></p>
+                    </div>
+                </div>
+                </div>
+        </section>  
+
+        <section class="join-section">
+            <div class="join-style">
+                <h1 class="noto-serif-font">Join the colorful Bunch</h1>
+                <input type="email" placeholder="Write email">
+                <button><span class="sub-color">Subscribe</span></button>
+            
+            </div>
             
         </section>
      </main>
 
      <footer>
-
+        <section class="footer">
+        <div>
+        <img class="logo" src="assets/logo.png" alt="">
+        <p class="text-gray">Indulge your senses with the<br>beauty and fragrance of our fresh<br>flower shop.</p>
+        </div>
+        <div>
+            <p class="text-gray">Home</p>
+            <p class="text-gray">About Us</p>
+            <p class="text-gray">Blog</p>
+            <p class="text-gray">FAQ</p>
+            <p class="text-gray">Contact Us</p>
+        </div>
+         <div>
+            <p class="text-gray">Features</p>
+            <p class="text-gray">Pricing</p>
+            <p class="text-gray">Privacy Policy</p>
+            <p class="text-gray">Terms of Service</p>
+            <p class="text-gray">Help Center</p>
+        </div>
+        <div>
+            <img src="assets/icon-linkedin.png" alt="">
+            <img src="assets/icon-twitter.png" alt="">
+            <img src="assets/icon-facebook.png" alt="">
+            <img src="assets/icon-youtube.png" alt="">
+        </div>
+        </section>
      </footer>
 </body>
 </html>
